# git-sage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.ini  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
gitsage/ingest/: file_scanner.py  repo_cloner.py
gitsage/ingest/tests/: README.md  __init__.py  test_file_scanner.py  test_init.py  test_integration.py  test_repo_cloner.py
gitsage/repo_ingest/: repo_fetcher.py  repo_scanner.py
gitsage/repo_ingest/tests/: README.md  __init__.py  conftest.py  test_init.py  test_integration.py  test_repo_fetcher.py  test_repo_scanner.py
